--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,13 @@
-FROM openjdk:8
+# Stage 1: build
+FROM maven:3.9.1-eclipse-temurin-17 AS build
+WORKDIR /app
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
+
+# Stage 2: runtime
+FROM eclipse-temurin:17-jdk
+WORKDIR /app
+COPY --from=build /app/target/*.jar spring-boot-docker.jar
 EXPOSE 9090
-
-ADD target/spring-boot-docker.jar spring-boot-docker.jar
 ENTRYPOINT ["java", "-jar", "spring-boot-docker.jar"]
-
-    
